[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
]
[tool.setuptools.packages.find]
include = [
    "GravelScape",
    "GravelScape.*",
]

[tool.setuptools_scm]
fallback_version = "9999"

[project]
name = "GravelScape"
dynamic = ["version"]
authors = [
    {name = "Amanda Lily Wild", email = "awild@gfz-potsdam.de"},
    {name = "Jean Braun", email = "jbraun@gfz-potsdam.de"},
    {name = "Benoît Bovy", email = "bbovy@gfz-potsdam.de"},
]
maintainers = [
    {name = "Fastscape contributors"},
]
license = {text = "GPLv3"}
description = "Grain size fining landscape evolution model"
keywords = ["simulation", "toolkit", "modeling", "grain size", "landscape"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "fastscape @https://github.com/fastscape-lem/fastscape",
    "flow-routing-depressions @https://github.com/fastscape-lem/flow-routing-depressions",
]

[project.urls]
Repository = "https://github.com/fastscape-lem/GravelScape"

[tool.black]
line-length = 100

[tool.ruff]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
]
select = [
  "F", # Pyflakes
  "E", # Pycodestyle
  "W",
  "I", # isort
  "UP", # Pyupgrade
]
exclude = [".eggs", "doc"]
target-version = "py39"

[tool.ruff.isort]
known-first-party = ["GravelScape"]




